--- a/includes/header.html
+++ b/includes/header.html
@@ -14,10 +14,8 @@ nav ul li ul li a{display:block;padding:.6rem 1rem;color:var(--menu-text-color);
 nav ul li ul li a:hover{color:var(--menu-hover-text)}
 </style>
 
-<!-- ✅ 심장 모니터 주입 -->
-<script type="module" src="/scripts/heart_monitor.js" defer></script>
 
-<header><a href="/about_luwain.html">루웨인 트리니티</a></header>
+<header><a href="/includes/about_luwain.html">루웨인 트리니티</a></header>
 
 <nav>
   <ul>
@@ -68,18 +66,6 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
       </ul>
     </li>
 
-    <li><a href="#">한얼</a>
-      <ul>
-        <li><a href="/haneul/index.html">한얼이란</a></li>
-        <li><a href="/haneul/geonganghan/index.html">건강한</a></li>
-        <li><a href="/haneul/jeulgilmanhan/index.html">즐길만한</a></li>
-        <li><a href="/haneul/seonhan/index.html">선한</a></li>
-        <li><a href="/haneul/seumateuhan/index.html">스마트한</a></li>
-        <li><a href="/haneul/shilmanhan/index.html">쉴만한</a></li>
-        <li><a href="/haneul/yuyeonhan/index.html">유연한</a></li>
-      </ul>
-    </li>
-
 
 <li><a href="#">굿즈</a>
       <ul>
@@ -97,14 +83,3 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
 <div id="heart-mini">
   <div id="heart-pulse"></div>
 </div>
-
-<link rel="stylesheet" href="/styles/heart_mini.css">
-<script type="module" src="/scripts/heart_mini.js" defer></script>
-<!-- 🫀 루웨인 심장 모니터 시작 -->
-<div id="heart-mini">
-  <div id="heart-pulse" title="루웨인 상태 보기"></div>
-</div>
-
-<link rel="stylesheet" href="/styles/heart_mini.css">
-<script type="module" src="/scripts/heart_mini.js" defer></script>
-<!-- 🫀 루웨인 심장 모니터 끝 -->
