--- a/includes/header.html
+++ b/includes/header.html
@@ -15,7 +15,7 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
 </style>
 
 
-<header><a href="/includes/about_luwain.html">루웨인 트리니티</a></header>
+<header><a href="/about_luwain.html">루웨인 트리니티</a></header>
 
 <nav>
   <ul>
@@ -67,6 +67,7 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
     </li>
 
 
+
 <li><a href="#">굿즈</a>
       <ul>
         <li><a href="/goods/animation/index.html">애니메이션 콘티</a></li>
@@ -76,9 +77,20 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
     </li>
 
 
-    <li><a href="/help_notices/index.html">루웨인 소식</a></li>
-    <li><a href="/customer_support/index.html">고객센터</a></li>
+    <li><a href="/help_notices/index.html">알림터</a></li>
+    <li><a href="/customer_support/index.html">도움터</a></li>
+
+
+
+<li><a href="#">퍼스나</a>
+  <ul>
+    <li><a href="/persona/about/index.html">퍼스나란?</a></li>
+    <li><a href="/persona/settings/index.html">퍼스나 설정</a></li>
+    <li><a href="/persona/list/index.html">내 퍼스나들</a></li>
   </ul>
+</li>
+
+</ul>
 </nav>
 <div id="heart-mini">
   <div id="heart-pulse"></div>
