--- a/includes/header.html
+++ b/includes/header.html
@@ -84,8 +84,12 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
 
 <li><a href="#">퍼스나</a>
   <ul>
-    <li><a href="/persona/about/index.html">퍼스나란?</a></li>
-    <li><a href="/persona/settings/index.html">퍼스나 설정</a></li>
+    <li><a href="/persona/about/index.html">퍼스나란</a></li>
+    <li><a href="/persona/introdece_ai/index.html">루웨인 AI란</a></li>
+    <li><a href="/persona/security/index.html">보안 관련 안내</a></li>
+    <li><a href="/persona/locker/index.html">사물함이란</a></li>
+    <li><a href="/persona/about_breathing_room/index.html">숨틔움방이란</a></li>
+    <li><a href="/persona/setting/index.html">설정</a></li>
     <li><a href="/persona/list/index.html">내 퍼스나들</a></li>
   </ul>
 </li>
