--- a/includes/header.html
+++ b/includes/header.html
@@ -77,8 +77,8 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
     </li>
 
 
-    <li><a href="/help_notices/index.html">알림터</a></li>
-    <li><a href="/customer_support/index.html">도움터</a></li>
+    <li><a href="/help_notices/index.html">도움터</a></li>
+    <li><a href="/customer_support/index.html">알림터</a></li>
 
 
 
