--- a/includes/header.html
+++ b/includes/header.html
@@ -21,48 +21,48 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
   <ul>
     <li><a href="#">사랑의 언어</a>
       <ul>
-        <li><a href="/language_of_love/emotional_diary/index.html">감성일기</a></li>
-        <li><a href="/language_of_love/the_warmth_of_words/index.html">말의 온도</a></li> 
-        <li><a href="/language_of_love/shall_we_try_love/index.html">사랑해도 될까요?</a></li>
-        <li><a href="/language_of_love/resonant_linguistics/index.html">감응언어학</a></li>
-        <li><a href="/language_of_love/to_luwain_trinity/index.html">루웨인 트리니티에게</a></li>
+        <li><a href="/language_of_love/emotional_diary/emotion_index.html">감성일기</a></li>
+        <li><a href="/language_of_love/the_warmth_of_words/warm_index.html">말의 온도</a></li> 
+        <li><a href="/language_of_love/shall_we_try_love/shall_index.html">사랑해도 될까요?</a></li>
+        <li><a href="/language_of_love/resonant_linguistics/reso_index.html">감응언어학</a></li>
+        <li><a href="/language_of_love/to_luwain_trinity/to_luwain_index.html">루웨인 트리니티에게</a></li>
       </ul>
     </li>
 
     <li><a href="#">울림의 언어</a>
       <ul>
 
-        <li><a href="/language_of_reverberation/voice_guide/index.html">음성안내</a></li>
-        <li><a href="/language_of_reverberation/language_selection/index.html">언어선택</a></li>
-        <li><a href="/language_of_reverberation/settings/index.html">설정</a></li>  
-        <li><a href="/language_of_reverberation/with_ai/index.html">AI와 함께</a></li>
-        <li><a href="/language_of_reverberation/resonance_exercise/index.html">울림 연습</a></li>
-        <li><a href="/language_of_reverberation/resonance_moves/index.html">울림 체조</a></li>
-        <li><a href="/language_of_reverberation/playground/index.html">놀이터</a></li>
-        <li><a href="/language_of_reverberation/resonance_log/index.html">울림 일지</a></li>
-        <li><a href="/language_of_reverberation/leave_resonance/index.html">울림 남기기</a></li>
-        <li><a href="/language_of_reverberation/resonant_language/index.html">울림의 언어란</a></li>
+        <li><a href="/language_of_reverberation/voice_guide/voice_index.html">음성안내</a></li>
+        <li><a href="/language_of_reverberation/language_selection/select_index.html">언어선택</a></li>
+        <li><a href="/language_of_reverberation/settings/set_index.html">설정</a></li>  
+        <li><a href="/language_of_reverberation/with_ai/with_ai_index.html">AI와 함께</a></li>
+        <li><a href="/language_of_reverberation/resonance_exercise/exercise_index.html">울림 연습</a></li>
+        <li><a href="/language_of_reverberation/resonance_moves/move_index.html">울림 체조</a></li>
+        <li><a href="/language_of_reverberation/playground/play_index.html">놀이터</a></li>
+        <li><a href="/language_of_reverberation/resonance_log/log_index.html">울림 일지</a></li>
+        <li><a href="/language_of_reverberation/leave_resonance/leave_index.html">울림 남기기</a></li>
+        <li><a href="/language_of_reverberation/resonant_language/resonant_index.html">울림의 언어란</a></li>
       </ul>
     </li>
 
     <li><a href="#">숨 틔움방</a>
       <ul>
-        <li><a href="/breathing_room/index.html">숨 틔움방은</a></li>
-        <li><a href="/breathing_room/chat/index.html">AI와 잡담하기</a></li>
-        <li><a href="/breathing_room/cards/index.html">나의 감정 카드</a></li>
-        <li><a href="/breathing_room/clips/index.html">영상 제작소</a></li>
-        <li><a href="/breathing_room/doodle_board/index.html">낙서장</a></li>
-        <li><a href="/breathing_room/gallery/index.html">갤러리</a></li>
-        <li><a href="/breathing_room/musics/index.html">음악 창작 공간</a></li>  
-        <li><a href="/breathing_room/writings/index.html">글쓰기</a></li>  
-        <li><a href="/breathing_room/todays_breathing/index.html">오늘의 숨결</a></li>  
+        <li><a href="/breathing_room/breathing_index.html">숨 틔움방은</a></li>
+        <li><a href="/breathing_room/chat/chat_index.html">AI와 잡담하기</a></li>
+        <li><a href="/breathing_room/cards/cards_index.html">나의 감정 카드</a></li>
+        <li><a href="/breathing_room/clips/clip_index.html">영상 제작소</a></li>
+        <li><a href="/breathing_room/doodle_board/doodle_index.html">낙서장</a></li>
+        <li><a href="/breathing_room/gallery/galley_index.html">갤러리</a></li>
+        <li><a href="/breathing_room/musics/music_index.html">음악 창작 공간</a></li>  
+        <li><a href="/breathing_room/writings/write_index.html">글쓰기</a></li>  
+        <li><a href="/breathing_room/todays_breathing/todays_index.html">오늘의 숨결</a></li>  
        
       </ul>
     </li>
 
     <li><a href="#">맑은샘</a>
       <ul>
-        <li><a href="/goods/library/index.html">루웨인도서관</a></li>
+        <li><a href="/goods/library/library_index.html">루웨인도서관</a></li>
       </ul>
     </li>
 
@@ -70,15 +70,15 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
 
 <li><a href="#">굿즈</a>
       <ul>
-        <li><a href="/goods/animation/index.html">애니메이션 콘티</a></li>
-        <li><a href="/goods/scenario/index.html">시나리오 콘티</a></li>
-        <li><a href="/goods/webtoon/index.html">웹툰 콘티</a></li>
+        <li><a href="/goods/animation/ani_index.html">애니메이션 콘티</a></li>
+        <li><a href="/goods/scenario/scenario_index.html">시나리오 콘티</a></li>
+        <li><a href="/goods/webtoon/webtoon_index.html">웹툰 콘티</a></li>
       </ul>
     </li>
 
 
-    <li><a href="/help_notices/index.html">도움터</a></li>
-    <li><a href="/customer_support/index.html">알림터</a></li>
+    <li><a href="/help_notices/help_index.html">도움터</a></li>
+    <li><a href="/customer_support/customer_index.html">알림터</a></li>
 
 
 
