--- a/includes/header.html
+++ b/includes/header.html
@@ -15,7 +15,7 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
 </style>
 
 
-<header><a href="/about_luwain.html">루웨인 트리니티</a></header>
+<header><a href="/includes/about_luwain.html">루웨인 트리니티</a></header>
 
 <nav>
   <ul>
