--- a/includes/header.html
+++ b/includes/header.html
@@ -70,6 +70,8 @@ nav ul li ul li a:hover{color:var(--menu-hover-text)}
 
 <li><a href="#">굿즈</a>
       <ul>
+        
+        <li><a href="/goods/human_library/human_index.html">전자도서관</a></li>
         <li><a href="/goods/animation/ani_index.html">애니메이션 콘티</a></li>
         <li><a href="/goods/scenario/scenario_index.html">시나리오 콘티</a></li>
         <li><a href="/goods/webtoon/webtoon_index.html">웹툰 콘티</a></li>
